# fscl-xstring-c

./: README.md  meson.build
.github/workflows/: cd_docker.yml
code/include/fossil/: xstring.h
code/include/fossil/xstring/: cipher.h  cstring.h  letter.h  number.h  skittles.h  utility.h  wygstring.h
code/include/trilobite/: xstring.h
code/include/trilobite/xstring/: cipher.h  color.h  cstring.h  letter.h  nlp.h  number.h  utility.h  wygstring.h
code/source/: cipher.c  color.c  cstring.c  letter.c  meson.build  nlp.c  number.c  skittles.c  utility.c  wygstring.c
demo/: demo_cipher.c  demo_letter.c  demo_string.c  demo_wygstring.c  meson.build
subprojects/: fscl-xtest-c.wrap
test/: meson.build  xtest_cipher.c  xtest_color.c  xtest_letter.c  xtest_nlp.c  xtest_number.c  xtest_skittles.c  xtest_string.c  xtest_wygstring.c  xunit_runner.c
